--- a/index.html
+++ b/index.html
@@ -1,74 +1,82 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>台灣食品法規智慧查詢系統</title>
+
+    <!-- Tailwind CDN（保留你原本的） -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- PDF / XLSX 相關（保留） -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <!-- 核心：Google Identity Services (GIS) SDK -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+    <!-- Google Identity Services -->
+    <script
+      src="https://accounts.google.com/gsi/client"
+      async
+      defer
+    ></script>
+
+    <!-- 字型 -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
-        body {
-            font-family: 'Noto+Sans+TC', sans-serif;
-            background-color: #f8fafc;
-            color: #1e293b;
-        }
-        
-        input {
-            color: #111827 !important;
-        }
-        
-        input:-webkit-autofill,
-        input:-webkit-autofill:hover, 
-        input:-webkit-autofill:focus, 
-        input:-webkit-autofill:active {
-            -webkit-box-shadow: 0 0 0 1000px white inset !important;
-            -webkit-text-fill-color: #111827 !important;
-            transition: background-color 5000s ease-in-out 0s;
-        }
-
-        ::selection {
-            background-color: #10b981;
-            color: white;
-        }
-
-        @keyframes progress {
-          0% { transform: translateX(-100%); }
-          100% { transform: translateX(100%); }
-        }
-        .animate-progress {
-          animation: progress 2s infinite linear;
-        }
-
-        ::-webkit-scrollbar { width: 6px; }
-        ::-webkit-scrollbar-track { background: #f1f1f1; }
-        ::-webkit-scrollbar-thumb { background: #10b981; border-radius: 10px; }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "idb-keyval": "https://esm.sh/idb-keyval@^6.2.1"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
-<body>
-    <div id="root"></div>
-    <script>
-      if (typeof pdfjsLib !== 'undefined') {
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+      body {
+        font-family: "Noto Sans TC", sans-serif;
+        background-color: #f8fafc;
+        color: #1f293b;
+        margin: 0;
       }
-    </script>
-<script type="module" src="/index.tsx"></script>
-</body>
+
+      input {
+        color: #111827 !important;
+      }
+
+      input:-webkit-autofill,
+      input:-webkit-autofill:hover,
+      input:-webkit-autofill:focus,
+      input:-webkit-autofill:active {
+        -webkit-box-shadow: 0 0 0 1000px white inset !important;
+        -webkit-text-fill-color: #111827 !important;
+        transition: background-color 5000s ease-in-out 0s;
+      }
+
+      ::selection {
+        background-color: #10b981;
+        color: white;
+      }
+
+      @keyframes progress {
+        0% {
+          transform: translateX(-100%);
+        }
+        100% {
+          transform: translateX(100%);
+        }
+      }
+
+      .animate-progress {
+        animation: progress 2s infinite linear;
+      }
+
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- ✅ React 掛載點 -->
+    <div id="root"></div>
+
+    <!-- ✅【關鍵】Vite / React 入口（沒有這行一定白畫面） -->
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
